--- a/app/src/main/res/layout/creatures_view_fragment.xml
+++ b/app/src/main/res/layout/creatures_view_fragment.xml
@@ -289,6 +289,7 @@
                     app:name="@{viewModel.creature.name}"
                     app:needIcon="@{@drawable/icon_hungry}"
                     app:needTitle="@{@string/hungry}"
+                    app:onAction="@{viewModel.feed}"
                     app:percentage="@{viewModel.creature.foodPercentage}" />
 
                 <include
@@ -297,6 +298,7 @@
                     app:name="@{viewModel.creature.name}"
                     app:needIcon="@{@drawable/icon_strength}"
                     app:needTitle="@{@string/strength}"
+                    app:onAction="@{viewModel.train}"
                     app:percentage="@{viewModel.creature.strengthPercentage}" />
 
                 <include
@@ -305,6 +307,7 @@
                     app:name="@{viewModel.creature.name}"
                     app:needIcon="@{@drawable/icon_humor}"
                     app:needTitle="@{@string/humor}"
+                    app:onAction="@{viewModel.play}"
                     app:percentage="@{viewModel.creature.humorPercentage}" />
 
             </TableLayout>
