--- a/app/src/main/res/layout/creatures_needs_actions_component.xml
+++ b/app/src/main/res/layout/creatures_needs_actions_component.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import type="kotlin.jvm.functions.Function0" />
+
+        <import type="kotlin.Unit" />
+
         <variable
             name="name"
             type="java.lang.String" />
@@ -24,6 +28,10 @@
         <variable
             name="actionIcon"
             type="android.graphics.drawable.Drawable" />
+
+        <variable
+            name="onAction"
+            type="Function0&lt;Unit>" />
     </data>
 
     <TableRow>
@@ -105,7 +113,8 @@
             <include
                 layout="@layout/creatures_action_icon_component"
                 app:icon="@{actionIcon}"
-                app:name="@{name}" />
+                app:name="@{name}"
+                app:onClick="@{onAction}" />
         </LinearLayout>
 
     </TableRow>
