feat(creature-action): set action button alpha to 0.3f if action isn't available

--- a/app/src/main/res/layout/creatures_needs_actions_component.xml
+++ b/app/src/main/res/layout/creatures_needs_actions_component.xml
@@ -32,6 +32,10 @@
         <variable
             name="onAction"
             type="Function0&lt;Unit>" />
+
+        <variable
+            name="actionAvailable"
+            type="java.lang.Boolean" />
     </data>
 
     <TableRow>
@@ -114,7 +118,8 @@
                 layout="@layout/creatures_action_icon_component"
                 app:icon="@{actionIcon}"
                 app:name="@{name}"
-                app:onClick="@{onAction}" />
+                app:onClick="@{onAction}"
+                app:onClickAvailable="@{actionAvailable != null ? actionAvailable : false}" />
         </LinearLayout>
 
     </TableRow>
