--- a/app/src/main/res/layout/creatures_action_icon_component.xml
+++ b/app/src/main/res/layout/creatures_action_icon_component.xml
@@ -19,12 +19,17 @@
         <variable
             name="onClick"
             type="Function0&lt;Unit>" />
+
+        <variable
+            name="onClickAvailable"
+            type="java.lang.Boolean" />
     </data>
 
     <LinearLayout
         android:id="@+id/linearLayoutIcon"
         android:layout_width="61dp"
         android:layout_height="61dp"
+        android:alpha="@{onClick == null || onClickAvailable ? 1f : 0.3f}"
         android:background="@drawable/round_icon_background"
         android:gravity="center">
 
@@ -34,7 +39,7 @@
             android:layout_height="50dp"
             android:background="#00FFFFFF"
             android:contentDescription="@{@string/creature_status_preview_name(name)"
-            android:onClick="@{() -> onClick != null ? onClick.invoke() : null}"
+            android:onClick="@{() -> onClick != null &amp;&amp; onClickAvailable ? onClick.invoke() : null}"
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@{icon}"
