--- a/app/src/main/res/layout/creatures_list_fragment.xml
+++ b/app/src/main/res/layout/creatures_list_fragment.xml
@@ -8,6 +8,10 @@
         <variable
             name="viewModel"
             type="tech.salvatore.livro_android_kotlin_paulo_salvatore.viewmodel.CreaturesViewModel" />
+
+        <variable
+            name="userViewModel"
+            type="tech.salvatore.livro_android_kotlin_paulo_salvatore.viewmodel.UserViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +20,20 @@
         android:layout_height="match_parent"
         tools:context=".view.creatures.list.CreaturesListFragment">
 
+        <Button
+            android:onClick="@{() -> userViewModel.chooseCreature()}"
+            android:id="@+id/btAddCreature"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Add Creature"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
@@ -23,7 +41,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btAddCreature"
             tools:listitem="" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
