feat(creatures-added): implement button to go back after adding a creature

--- a/app/src/main/res/layout/creatures_added_fragment.xml
+++ b/app/src/main/res/layout/creatures_added_fragment.xml
@@ -68,6 +68,19 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/icon_humor" />
 
+        <Button
+            android:id="@+id/btAddCreature"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:text="See creature in list"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
