--- a/app/src/main/res/layout/creatures_list_item.xml
+++ b/app/src/main/res/layout/creatures_list_item.xml
@@ -7,12 +7,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="model"
+            name="creature"
             type="tech.salvatore.livro_android_kotlin_paulo_salvatore.model.domain.Creature" />
-
-        <variable
-            name="number"
-            type="java.lang.Integer" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -23,36 +19,76 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{model == null ? View.GONE : View.VISIBLE}">
+            android:layout_height="wrap_content"
+            android:background="@drawable/screen_background">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvCreatureNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{model != null ? model.name : "# 001"}'
+                android:layout_marginStart="28dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/saira_400"
+                android:text="@{@string/creature_number(creature.number)}"
+                android:textColor="#5D414F"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="# 001" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="tvCreatureNumber" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayoutTitleSection"
+                style="@style/creatures_background_title_section"
+                android:layout_height="37dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/barrier1">
+
+                <TextView
+                    android:id="@+id/tvCreatureName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="27dp"
+                    android:layout_marginLeft="27dp"
+                    android:fontFamily="@font/saira_400"
+                    android:text="@{creature.name}"
+                    android:textColor="#5D414F"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Lagartorbas" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="constraintLayoutTitleSection" />
+
+            <ImageView
+                android:id="@+id/ivCreature"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:contentDescription="@string/creatures_image"
+                app:enableSilhouette="@{!creature.isKnown}"
+                app:imageUrl="@{creature.imageUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Creature's Name" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{model == null ? View.VISIBLE : View.GONE}">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{@string/creature_number(number)}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Creature's Position" />
+                app:layout_constraintTop_toBottomOf="@id/barrier3"
+                tools:src="@drawable/icon_humor" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
