feat(creatures-evolving): add layout

--- a/app/src/main/res/layout/creatures_evolving_fragment.xml
+++ b/app/src/main/res/layout/creatures_evolving_fragment.xml
@@ -4,27 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
-            type="tech.salvatore.livro_android_kotlin_paulo_salvatore.viewmodel.CreaturesViewModel" />
+            type="tech.salvatore.livro_android_kotlin_paulo_salvatore.viewmodel.CreatureViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/screen_background"
         tools:context=".view.creatures.list.CreaturesEvolvingFragment">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Text"
-            tools:text="Text Placeholder"
+        <ImageView
+            android:id="@+id/ivBackgroundTop"
+            android:layout_width="0dp"
+            android:layout_height="221dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/screen_top_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayoutTitleSection"
+            style="@style/creatures_background_title_section"
+            android:layout_height="84dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/saira_400"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="@{@string/creature_evolved(viewModel.creature.name)}"
+                android:textColor="#5D414F"
+                android:textSize="32sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/creature_evolved" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/ivCreature"
+            android:layout_width="340dp"
+            android:layout_height="340dp"
+            android:layout_marginTop="20dp"
+            android:contentDescription="@string/creatures_image"
+            app:imageUrl="@{viewModel.creature.imageUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/icon_humor" />
+
+        <Button
+            android:id="@+id/btAddCreature"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:text="See creature in list"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
